Update central config loading mechanism